# public_purchases

./: README.md  pyproject.toml
public_puchase/Analise_Amostral/: functions.py  municipio.csv
public_puchase/utils/: TCE_data.py  TCE_spark.py
tests/: test_public_puchase copy.py
