[tool.poetry]
name = "public_puchase"
version = "0.1.0"
description = ""
authors = ["Luiz_Alexandre21 <luizalexandre21@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.3"
pandas = "^1.4.1"
wordcloud = "^1.8.1"
plotly = "^5.6.0"
matplotlib = "^3.5.1"
nltk = "^3.7"
multidict = "^6.0.2"
spacy = "^3.2.3"
scipy = "^1.8.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
